--- a/html/mw3.html
+++ b/html/mw3.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <header>
-      <img src="img/logoWarzone.png" alt="Logo del sitio" />
+      <img src="../img/logoWarzone.png" alt="Logo del sitio" />
       <nav class="barraNavegacion">
         <input id="menuToggle" type="checkbox" />
         <label for="menuToggle" class="menuHamburguesa">
