--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="../img/logoWarzone.png" alt="">
+        <img src="img/logoWarzone.png" alt="">
         <nav class="barraNavegacion">
             <input id="menuToggle" type="checkbox">
             <label for="menuToggle" class="menuHamburguesa">
