--- a/html/mw3.html
+++ b/html/mw3.html
@@ -79,7 +79,7 @@
         aria-labelledby="mw3-title"
       >
         <video autoplay muted loop playsinline class="mw3-bg-video">
-          <source src="../video/mw3_trailer_bg.mp4" type="video/mp4" />
+          <source src="../video/trailer.mp4" type="video/mp4" />
           Tu navegador no soporta el elemento video.
         </video>
 
